--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,110 +1,114 @@
 
-# required to specify the c++ standard
 cmake_minimum_required(VERSION 3.0)
 
-# required for install
+# Options
+# =======
+
+project(GMatNonLinearElastic)
+
+option(BUILD_TESTS "${PROJECT_NAME} Build tests" OFF)
+
+# Internals
+# =========
+
+set(GMATNONLINEARELASTIC_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+# Version
+# =======
+
+file(
+    STRINGS "${GMATNONLINEARELASTIC_INCLUDE_DIR}/GMatNonLinearElastic/config.h" GMatNonLinearElastic_version_defines
+    REGEX "#define GMATNONLINEARELASTIC_VERSION_(MAJOR|MINOR|PATCH)")
+
+foreach(ver ${GMatNonLinearElastic_version_defines})
+    if(ver MATCHES "#define GMATNONLINEARELASTIC_VERSION_(MAJOR|MINOR|PATCH) +([^ ]+)$")
+        set(GMATNONLINEARELASTIC_VERSION_${CMAKE_MATCH_1} "${CMAKE_MATCH_2}" CACHE INTERNAL "")
+    endif()
+endforeach()
+
+set(GMATNONLINEARELASTIC_VERSION
+    ${GMATNONLINEARELASTIC_VERSION_MAJOR}.${GMATNONLINEARELASTIC_VERSION_MINOR}.${GMATNONLINEARELASTIC_VERSION_PATCH})
+
+message(STATUS "Building GMatNonLinearElastic v${GMATNONLINEARELASTIC_VERSION}")
+
+# Build
+# =====
+
+set(GMATNONLINEARELASTIC_HEADERS
+    ${GMATNONLINEARELASTIC_INCLUDE_DIR}/GMatNonLinearElastic/Cartesian3d.h
+    ${GMATNONLINEARELASTIC_INCLUDE_DIR}/GMatNonLinearElastic/Cartesian3d.hpp
+    ${GMATNONLINEARELASTIC_INCLUDE_DIR}/GMatNonLinearElastic/Cartesian3d_NonLinearElastic.hpp
+    ${GMATNONLINEARELASTIC_INCLUDE_DIR}/GMatNonLinearElastic/Cartesian3d_Matrix.hpp
+    ${GMATNONLINEARELASTIC_INCLUDE_DIR}/GMatNonLinearElastic/config.h)
+
+add_library(${PROJECT_NAME} INTERFACE)
+
+target_include_directories(
+    ${PROJECT_NAME} INTERFACE
+    $<BUILD_INTERFACE:${GMATNONLINEARELASTIC_INCLUDE_DIR}>
+    $<INSTALL_INTERFACE:include>)
+
+# Installation
+# ============
+
 include(CMakePackageConfigHelpers)
 include(GNUInstallDirs)
 
-# project settings
-# ----------------
+install(
+    TARGETS ${PROJECT_NAME}
+    EXPORT ${PROJECT_NAME}-targets)
 
-# name
-project(GMatNonLinearElastic)
+export(
+    EXPORT ${PROJECT_NAME}-targets
+    FILE "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Targets.cmake")
 
-# file that contains the version information
-set(parse_version include/GMatNonLinearElastic/config.h)
+install(
+    FILES ${GMATNONLINEARELASTIC_HEADERS}
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
 
-# header files
-set(headers
-  include/GMatNonLinearElastic/config.h
-  include/GMatNonLinearElastic/Cartesian3d.h
-  include/GMatNonLinearElastic/Cartesian3d.hpp
-  include/GMatNonLinearElastic/Cartesian3d_NonLinearElastic.hpp
-  include/GMatNonLinearElastic/Cartesian3d_Matrix.hpp
-)
-
-# automatically parse the version number
-file(READ "${parse_version}" version)
-string(REGEX MATCH "define[ \t]+GMATNONLINEARELASTIC_WORLD_VERSION[ \t]+([0-9]+)" _ "${version}")
-set(world_version "${CMAKE_MATCH_1}")
-string(REGEX MATCH "define[ \t]+GMATNONLINEARELASTIC_MAJOR_VERSION[ \t]+([0-9]+)" _ "${version}")
-set(major_version "${CMAKE_MATCH_1}")
-string(REGEX MATCH "define[ \t]+GMATNONLINEARELASTIC_MINOR_VERSION[ \t]+([0-9]+)" _ "${version}")
-set(minor_version "${CMAKE_MATCH_1}")
-set(GMATNONLINEARELASTIC_VERSION ${world_version}.${major_version}.${minor_version})
-
-# paths
-# -----
-
-set(GMATNONLINEARELASTIC_ROOT_DIR    "${CMAKE_INSTALL_PREFIX}")
-set(GMATNONLINEARELASTIC_INCLUDE_DIR "${CMAKE_INSTALL_INCLUDEDIR}")
-set(INCLUDE_INSTALL_DIR              "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}")
-set(CMAKEPACKAGE_INSTALL_DIR         "${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}")
-set(PKGCONFIG_INSTALL_DIR            "${CMAKE_INSTALL_DATADIR}/pkgconfig")
-set(fcmake                           "GMatNonLinearElasticConfig.cmake")
-set(fpkg                             "GMatNonLinearElastic.pc")
-
-# options
-# -------
-
-# configure pkg-config (default: on)
-option(PKGCONFIG "Build pkg-config ${fpkg} file" ON)
-
-# disable pkg-config for native Windows builds
-if(WIN32 OR CMAKE_HOST_SYSTEM_NAME MATCHES Windows)
-  option(PKGCONFIG "Build pkg-config ${fpkg} file" OFF)
-endif()
-
-# C++ standard
-# ------------
-
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-if(NOT CMAKE_CXX_STANDARD OR CMAKE_CXX_STANDARD LESS 14)
-  set(CMAKE_CXX_STANDARD 14)
-endif()
-
-# configure CMake
-# ---------------
+set(GMATNONLINEARELASTIC_CMAKECONFIG_INSTALL_DIR
+    "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" CACHE
+    STRING "install path for ${PROJECT_NAME}Config.cmake")
 
 configure_package_config_file(
-  ${CMAKE_CURRENT_SOURCE_DIR}/GMatNonLinearElasticConfig.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/GMatNonLinearElasticConfig.cmake
-  PATH_VARS GMATNONLINEARELASTIC_INCLUDE_DIR GMATNONLINEARELASTIC_ROOT_DIR
-  INSTALL_DESTINATION ${CMAKEPACKAGE_INSTALL_DIR}
-  NO_CHECK_REQUIRED_COMPONENTS_MACRO
-)
+    "GMatNonLinearElasticConfig.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
+    INSTALL_DESTINATION ${GMATNONLINEARELASTIC_CMAKECONFIG_INSTALL_DIR})
 
-# install
-# -------
+set(_GMATNONLINEARELASTIC_CMAKE_SIZEOF_VOID_P ${CMAKE_SIZEOF_VOID_P})
 
-# pkg-config
-if(PKGCONFIG)
-  configure_file(${fpkg}.in ${fpkg} @ONLY)
-  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${fpkg} DESTINATION ${PKGCONFIG_INSTALL_DIR})
+unset(CMAKE_SIZEOF_VOID_P)
+
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+    VERSION ${GMATNONLINEARELASTIC_VERSION}
+    COMPATIBILITY AnyNewerVersion)
+
+set(CMAKE_SIZEOF_VOID_P ${_GMATNONLINEARELASTIC_CMAKE_SIZEOF_VOID_P})
+
+install(
+    FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+    DESTINATION ${GMATNONLINEARELASTIC_CMAKECONFIG_INSTALL_DIR})
+
+install(
+    EXPORT ${PROJECT_NAME}-targets
+    FILE "${PROJECT_NAME}Targets.cmake"
+    DESTINATION ${GMATNONLINEARELASTIC_CMAKECONFIG_INSTALL_DIR})
+
+configure_file(
+    "GMatNonLinearElastic.pc.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
+     @ONLY)
+
+install(
+    FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc"
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig/")
+
+# Add builds
+# ==========
+
+if(BUILD_TESTS)
+    add_subdirectory(test)
 endif()
-
-# CMake
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${fcmake} DESTINATION ${CMAKEPACKAGE_INSTALL_DIR})
-
-# header files
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${headers} DESTINATION ${INCLUDE_INSTALL_DIR})
-
-# print information to screen
-# ---------------------------
-
-message(STATUS "")
-message(STATUS "+---------------------------------------------------------------------------------")
-message(STATUS "|")
-message(STATUS "| Use 'make install' to install in")
-message(STATUS "|   ${CMAKE_INSTALL_PREFIX}")
-message(STATUS "|")
-message(STATUS "| To specify a custom directory call")
-message(STATUS "|   cmake /path/to/${PROJECT_NAME} -DCMAKE_INSTALL_PREFIX=yourprefix")
-message(STATUS "|")
-message(STATUS "| For custom paths, add the following line to your '~/.bashrc'")
-message(STATUS "|   export PKG_CONFIG_PATH=${CMAKE_INSTALL_PREFIX}/share/pkgconfig:$PKG_CONFIG_PATH")
-message(STATUS "|")
-message(STATUS "+---------------------------------------------------------------------------------")
-message(STATUS "")
