--- a/GMatNonLinearElasticConfig.cmake.in
+++ b/GMatNonLinearElasticConfig.cmake.in
@@ -1,4 +1,13 @@
-set(GMATNONLINEARELASTIC_FOUND 1)
+# GMatNonLinearElastic cmake module
+# This module sets the following variables:
+#
+#   GMatNonLinearElastic_FOUND - true if GMatNonLinearElastic found
+#   GMatNonLinearElastic_INCLUDE_DIRS - the directory containing GMatNonLinearElastic headers
+#   GMatNonLinearElastic_LIBRARY - empty
 
-set(GMATNONLINEARELASTIC_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-set(GMATNONLINEARELASTIC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
+@PACKAGE_INIT@
+
+if(NOT TARGET @PROJECT_NAME@)
+  include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
+  get_target_property(@PROJECT_NAME@_INCLUDE_DIRS @PROJECT_NAME@ INTERFACE_INCLUDE_DIRECTORIES)
+endif()
