--- a/environment.yaml
+++ b/environment.yaml
@@ -1,12 +1,22 @@
 channels:
 - conda-forge
 dependencies:
-- breathe - cmake - doxygen
+- breathe
+- cmake
+- doxygen
 - furo
-- gmatelastic >=0.4.0
-- gmattensor >=0.10.1 - h5py - ninja - numpy - pybind11 - python
-- python-gmattensor >0.9.0 - scikit-build - setuptools_scm
+- gmatelastic >=0.5.1
+- gmattensor >=0.10.1
+- h5py
+- ninja
+- numpy
+- pybind11
+- python
+- python-gmattensor >0.9.0
+- scikit-build
+- setuptools_scm
 - sphinx
 - sphinx-tabs
 - sphinx_rtd_theme
-- xtensor >=0.24.2 - xtensor-python
+- xtensor >=0.24.2
+- xtensor-python
