--- a/environment.yaml
+++ b/environment.yaml
@@ -12,11 +12,12 @@ dependencies:
 - numpy
 - pybind11
 - python
+- python-gmatelastic
 - python-gmattensor >0.9.0
 - scikit-build
 - setuptools_scm
 - sphinx
-- sphinx-tabs
 - sphinx_rtd_theme
+- sphinx-tabs
 - xtensor >=0.24.2
 - xtensor-python
